[package]
name = "axum-gql-tracing"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = "6.0.6"
async-graphql-axum = "6.0.6"
axum = "0.6.20"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.2"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
